--- a/codes/HelloConcurrent/HelloConcurrent/HelloConcurrent.vcxproj.filters
+++ b/codes/HelloConcurrent/HelloConcurrent/HelloConcurrent.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="list2.2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="list3.3.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
